--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,21 @@
-image: python:3.6.0
 pipelines:
   default:
     - step:
+        image:
+          - python:3.6.0
         caches:
           - pip
         script:
           - python -mpip install matplotlib
           - python -mpip install numpy
           - python -m unittest -v test.test_dispersion
+    - step:
+        image:
+          - python:2.7.13
+        caches:
+          - pip
+        script:
+          - python -mpip install matplotlib
+          - python -mpip install numpy
+          - python -m unittest -v test.test_dispersion
+
