--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,8 @@
 pipelines:
   default:
     - step:
-        image:
-          - python:3.6.0
+        name: Python 3 test
+        image: python:3.6.0
         caches:
           - pip
         script:
@@ -10,12 +10,11 @@ pipelines:
           - python -mpip install numpy
           - python -m unittest -v test.test_dispersion
     - step:
-        image:
-          - python:2.7.13
+        name: Python 2 test
+        image: python:2.7.13
         caches:
           - pip
         script:
           - python -mpip install matplotlib
           - python -mpip install numpy
           - python -m unittest -v test.test_dispersion
-
