Add initial high symmetry point labelling

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,4 +19,5 @@ pipelines:
           - python -mpip install matplotlib
           - python -mpip install numpy
           - python -mpip install pint
+          - python -mpip install seekpath
           - python -m unittest -v test.test_dispersion
