Update Bitbucket pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,6 +10,7 @@ pipelines:
           - python -mpip install numpy
           - python -mpip install pint
           - python -mpip install seekpath
+	  - python -mpip install scipy
           - python -m unittest discover -v test
     - step:
         name: Python 2 test
@@ -21,4 +22,5 @@ pipelines:
           - python -mpip install numpy
           - python -mpip install pint
           - python -mpip install seekpath
+	  - python -mpip install scipy
           - python -m unittest discover -v test
