--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,10 @@
 envlist = py27,py36
 
 [testenv]
-deps = mock, numpy
+deps =
+    mock
+    numpy
+    .[matplotlib]
 commands =
     pushd test
     python -m unittest discover -v .
