Fix tox execution

--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,10 @@
 envlist = py27,py36
 
 [testenv]
+changedir = test
 deps =
     mock
     numpy
     .[matplotlib]
 commands =
-    pushd test
     python -m unittest discover -v .
-    popd
