--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ changedir = test
 deps =
     mock
     numpy
+    unittest-xml-reporting
     .[matplotlib]
 commands =
-    python -m unittest discover -v .
+    python run_tests.py
