COmments in ini file

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-requires = tox-conda
-envlist = py36,py37,py38
+requires = tox-conda # Use conda to set up the python environments to run in
+envlist = py36,py37,py38 # The python environments to run the tests in
 
 [testenv]
-changedir = test
+changedir = test # Change to the test directory before running them
 deps =
     mock
     numpy
-    unittest-xml-reporting
+    unittest-xml-reporting # Report test runs in a junit like format for Jenkins
     .[matplotlib]
 commands =
     python run_tests.py
