Use correct comment syntax

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,17 @@
 [tox]
-requires = tox-conda # Use conda to set up the python environments to run in
-envlist = py36,py37,py38 # The python environments to run the tests in
+# Use conda to set up the python environments to run in
+requires = tox-conda
+# The python environments to run the tests in
+envlist = py36,py37,py38
 
 [testenv]
-changedir = test # Change to the test directory before running them
+# Change to the test directory before running them
+changedir = test
+# unittest-xml-reporting reports test runs in a junit like format for Jenkins
 deps =
     mock
     numpy
-    unittest-xml-reporting # Report test runs in a junit like format for Jenkins
+    unittest-xml-reporting
     .[matplotlib]
 commands =
     python run_tests.py
