Trying to build c extension correctly

--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,17 @@
 requires = tox-conda
 # The python environments to run the tests in
 envlist = py36,py37,py38
+# Skip the execution of setup.py as we do it with the correct arg in commands_pre below
+skipsdist = True
 
 [testenv]
-# Change to the test directory before running them
-changedir = test
 # unittest-xml-reporting reports test runs in a junit like format for Jenkins
 deps =
     mock
     numpy
     unittest-xml-reporting
-    .[matplotlib]
+    matplotlib
+commands_pre =
+    python -m pip install . -vv
 commands =
-    python run_tests.py
+    python test/run_tests.py
