--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,19 @@
 [tox]
+# Use conda to set up the python environments to run in
 requires = tox-conda
+# The python environments to run the tests in
 envlist = py36,py37,py38
+# Skip the execution of setup.py as we do it with the correct arg in commands_pre below
+skipsdist = True
 
 [testenv]
-changedir = test
+# unittest-xml-reporting reports test runs in a junit like format for Jenkins
 deps =
     mock
     numpy
-    .[matplotlib]
+    unittest-xml-reporting
+    matplotlib
+commands_pre =
+    python -m pip install . -vv
 commands =
-    python -m unittest discover -v .
+    python test/run_tests.py
