--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py36
+envlist = py36,py37,py38
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
