--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,4 @@ deps =
 commands_pre =
     python -m pip install . -vv
 commands =
-    python test/run_tests.py
+    python tests_and_analysis/test/run_tests.py
