91 pylint in ci (#37)
* Adding static code analysis

* Correct pipeline syntax

* FIx dependency pin

* Attempt to use violations plugin

* Not using report violations

* New tactic for warnings-ng

* Move into stage

* Trying to detect pylint output correctly

* Apparently there are no pylint warnings, I don't believe it

* I still don't believe there is no issues in pylint

* Trying out parseable text reporter

* Remove debugging

* Moving structure

* Installing numpy and matplotlib to avoid pylint warnings

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ build/
 dist/
 euphonic.egg-info/
 .tox
-test/reports/
+tests_and_analysis/test/reports/
+tests_and_analysis/static_code_analysis/reports/
