--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
     numpy
     unittest-xml-reporting
     matplotlib
+    coverage==5.0.4
 commands_pre =
     python -m pip install . -vv
 commands =
