Centralise data location naming

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py36,py37,py38
+envlist = py36
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -11,9 +11,9 @@ skipsdist = True
 deps =
     mock
     numpy
-    unittest-xml-reporting
     matplotlib
+    pytest
 commands_pre =
-    python -m pip install . -vv
+    python -m pip install .
 commands =
-    python tests_and_analysis/test/run_tests.py
+    python -m pytest tests_and_analysis/test/test_bands_data.py
