Using pytest in run_tests.py

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,6 @@ envlist = py36
 skipsdist = True
 
 [testenv]
-# unittest-xml-reporting reports test runs in a junit like format for Jenkins
 deps =
     mock
     numpy
@@ -16,4 +15,4 @@ deps =
 commands_pre =
     python -m pip install .
 commands =
-    python -m pytest tests_and_analysis/test/test_bands_data.py
+    python tests_and_analysis/test/run_tests.py
