Better comments, add back to envlist

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -13,4 +13,4 @@ deps =
     pytest
     euphonic[matplotlib]=={env:EUPHONIC_VERSION}
 commands =
-    python test/run_tests.py
+    python tests_and_analysis/test/run_tests.py
