96 convert to pytest (#39)
* Centralise data location naming

* Using pytest in run_tests.py

* Better comments, add back to envlist

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -7,11 +7,10 @@ envlist = py36,py37,py38
 skipsdist = True
 
 [testenv]
-# unittest-xml-reporting reports test runs in a junit like format for Jenkins
 deps =
     mock
     numpy
-    unittest-xml-reporting
+    pytest
     euphonic[matplotlib]=={env:EUPHONIC_VERSION}
 commands =
-    python test/run_tests.py
+    python tests_and_analysis/test/run_tests.py
