--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,12 @@ envlist = py36,py37,py38
 skipsdist = True
 
 [testenv]
-# unittest-xml-reporting reports test runs in a junit like format for Jenkins
 deps =
     mock
     numpy
-    unittest-xml-reporting
     matplotlib
+    pytest
 commands_pre =
-    python -m pip install . -vv
+    python -m pip install .
 commands =
     python tests_and_analysis/test/run_tests.py
