Correct address for coverage.xml

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -10,7 +10,7 @@ skipsdist = True
 deps =
     mock
     numpy
-    pytest
+    pytest==5.4.1
     euphonic[matplotlib]=={env:EUPHONIC_VERSION}
 commands =
     python tests_and_analysis/test/run_tests.py
