--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
     mock
     numpy
     matplotlib
-    pytest
+    pytest==5.4.1
     coverage==5.0.4
 commands_pre =
     python -m pip install .
