Import matplotlib correctly

--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,8 @@ skipsdist = True
 deps =
     mock
     numpy
-    matplotlib
     pytest
 commands_pre =
-    python -m pip install .
+    python -m pip install .[matplotlib]
 commands =
     python tests_and_analysis/test/run_tests.py
