Make Phonopy reader dependencies optional

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -11,6 +11,6 @@ deps =
     mock
     numpy
     pytest
-    euphonic[matplotlib]=={env:EUPHONIC_VERSION}
+    euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}
 commands =
     python tests_and_analysis/test/run_tests.py
