--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ deps =
     numpy
     pytest
 commands_pre =
-    python -m pip install .[matplotlib]
+    python -m pip install .[matplotlib,phonopy_reader]
 commands =
     python tests_and_analysis/test/run_tests.py
