--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,4 +16,7 @@ python:
    install:
       - method: pip
         path: .
+        extra_requirements:
+           - matplotlib
+           - phonopy_reader
       - requirements: doc/requirements.txt
