Fixed a subtle issue that cause 0% reports, because coverage was recorded on the wrong files even though the same

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,6 @@ deps =
     pytest==5.4.1
     coverage==5.0.4
 commands_pre =
-    python -m pip install .[matplotlib]
+    python -m pip install -e .[matplotlib]
 commands =
     python tests_and_analysis/test/run_tests.py
