Add report switch

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -11,6 +11,7 @@ deps =
     mock
     numpy
     pytest==5.4.1
+    coverage==5.0.4
     euphonic[matplotlib]=={env:EUPHONIC_VERSION}
 commands =
-    python tests_and_analysis/test/run_tests.py
+    python tests_and_analysis/test/run_tests.py --report
