--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py36
+envlist = py36,py37,py38
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -10,10 +10,9 @@ skipsdist = True
 deps =
     mock
     numpy
-    matplotlib
     pytest==5.4.1
     coverage==5.0.4
 commands_pre =
     python -m pip install -e .[matplotlib]
 commands =
-    python tests_and_analysis/test/run_tests.py --cov
+    python tests_and_analysis/test/run_tests.py --cov --report
