--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,9 @@ skipsdist = True
 deps =
     mock
     numpy
-    pytest
+    pytest==5.4.1
+    coverage==5.0.4
 commands_pre =
-    python -m pip install .[matplotlib]
+    python -m pip install -e .[matplotlib]
 commands =
-    python tests_and_analysis/test/run_tests.py
+    python tests_and_analysis/test/run_tests.py --cov --report
