Move dependencies into files to avoid duplication

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -8,10 +8,7 @@ skipsdist = True
 
 [testenv]
 deps =
-    mock
-    numpy
-    pytest==5.4.1
-    coverage==5.0.4
+    -r tests_and_analysis/tox_requirements.txt
     euphonic[matplotlib]=={env:EUPHONIC_VERSION}
 commands =
     python tests_and_analysis/test/run_tests.py --report
