--- a/release_tox.ini
+++ b/release_tox.ini
@@ -3,12 +3,13 @@
 requires = tox-conda
 # The python environments to run the tests in
 envlist = py36,py37,py38
-# Skip the execution of setup.py as we do it with the correct arg in commands_pre below
+# Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
 [testenv]
 deps =
     -r tests_and_analysis/tox_requirements.txt
-    euphonic[matplotlib]=={env:EUPHONIC_VERSION}
+commands_pre =
+    python -m pip install euphonic[matplotlib]=={env:EUPHONIC_VERSION} --force-reinstall --index-url https://pypi.org/simple
 commands =
     python tests_and_analysis/test/run_tests.py --report
