Structure unit and Integration tests nicely

--- a/tests_and_analysis/test/pytest.ini
+++ b/tests_and_analysis/test/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 markers =
-    unit: mark tests as a unit test (deselect with -u)
-    integration: mark tests as an integration test (deselect with -i)
+    unit: mark tests as a unit test
+    integration: mark tests as an integration test
