--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,6 @@ skipsdist = True
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -e .[matplotlib] --force-reinstall
+    python -m pip install -e .[matplotlib]
 commands =
-    python tests_and_analysis/test/run_tests.py --cov --report
+    python tests_and_analysis/test/run_tests.py --cov --report {posargs}
