--- a/release_tox.ini
+++ b/release_tox.ini
@@ -10,6 +10,6 @@ skipsdist = True
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install euphonic[matplotlib]=={env:EUPHONIC_VERSION} --force-reinstall --index-url https://pypi.org/simple
+    python -m pip install euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION} --force-reinstall --index-url https://pypi.org/simple
 commands =
     python tests_and_analysis/test/run_tests.py --report
