Better email message

--- a/tests_and_analysis/performance_benchmarking/Jenkinsfile
+++ b/tests_and_analysis/performance_benchmarking/Jenkinsfile
@@ -97,7 +97,7 @@ pipeline {
                 def email = getGitCommitAuthorEmail()
                 mail (
                     to: "$email",
-                    subject: "Failed pipeline: ${env.JOB_BASE_NAME}",
+                    subject: "Failed performance tests: ${env.JOB_BASE_NAME}",
                     body: "See ${env.BUILD_URL}"
                 )
             }
