--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,10 @@ envlist = py36,py37,py38
 skipsdist = True
 
 [testenv]
+install_command = python -m pip install {opts} {packages}
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -e .[matplotlib,phonopy_reader]
+    python -m pip install -e '.[matplotlib,phonopy_reader]'
 commands =
     python tests_and_analysis/test/run_tests.py --cov --report
