Install command for release_tox

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -7,6 +7,7 @@ envlist = py36,py37,py38
 skipsdist = True
 
 [testenv]
+install_command = python -m pip install {opts} {packages}
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
