106 osx ci node (#60)
* Reapply changes

* Try without trailing 0

* Working on OSX except for tolerances

* Add OSX instructions

* Remove Jenkinsfile and comment

* Make release_tox.ini osx friendly

* Install command for release_tox

* Fix return bug

* Indent correctly

* Move OSX tutorial parts

Co-authored-by: James King <jamesking@ndw2304mac.isis.cclrc.ac.uk>

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -7,9 +7,10 @@ envlist = py36,py37,py38
 skipsdist = True
 
 [testenv]
+install_command = python -m pip install {opts} {packages}
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION} --force-reinstall --index-url https://pypi.org/simple
+    python -m pip install 'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' --force-reinstall --index-url https://pypi.org/simple
 commands =
     python tests_and_analysis/test/run_tests.py --report
