--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ deps =
 commands_pre =
     python -m pip install -e .[matplotlib,phonopy_reader]
 commands =
-    python tests_and_analysis/test/run_tests.py --cov --report {posargs} -t tests_and_analysis/test/euphonic_test
+    python tests_and_analysis/test/run_tests.py --cov --report {posargs}
