--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,6 @@ install_command = python -m pip install {opts} {packages}
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -e '.[matplotlib,phonopy_reader]'
+    python -m pip install -vvv -e '.[matplotlib,phonopy_reader]'
 commands =
     python tests_and_analysis/test/run_tests.py --cov --report {posargs}
