--- a/release_tox.ini
+++ b/release_tox.ini
@@ -11,6 +11,6 @@ install_command = python -m pip install {opts} {packages}
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install 'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' --force-reinstall --index-url https://pypi.org/simple
+    python -m pip install -vvv 'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' --force-reinstall --index-url https://pypi.org/simple
 commands =
     python tests_and_analysis/test/run_tests.py --report
