Ensure C extension is rebuilt for py36-min

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,9 @@ deps =
     -rtests_and_analysis/minimum_euphonic_requirements.txt
     -rtests_and_analysis/tox_requirements.txt
 commands_pre =
+# Force rebuild of euphonic extension to avoid Numpy clash
+# (it still exists from py36 env)
+    rm -rf build
     python -m pip install -vvv -e '.[matplotlib,phonopy_reader]'
 commands =
     python tests_and_analysis/test/run_tests.py {posargs}
