--- a/tox.ini
+++ b/tox.ini
@@ -2,15 +2,32 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py36,py37,py38
+envlist = py36,py37,py38,py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
 [testenv]
 install_command = python -m pip install {opts} {packages}
 deps =
-    -r tests_and_analysis/tox_requirements.txt
+    numpy
+    -rtests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -vvv -e '.[matplotlib,phonopy_reader]'
+    python -m pip install -vvv --upgrade --upgrade-strategy eager -e '.[matplotlib,phonopy_reader]'
 commands =
     python tests_and_analysis/test/run_tests.py --cov --report {posargs}
+
+[testenv:py36-minrequirements-linux]
+install_command = python -m pip install {opts} {packages}
+platform =
+    linux: linux
+deps =
+    numpy==1.12.1
+    -rtests_and_analysis/minimum_euphonic_requirements.txt
+    -rtests_and_analysis/tox_requirements.txt
+commands_pre =
+# Force rebuild of euphonic extension to avoid Numpy clash
+# (it still exists from py36 env)
+    rm -rf build
+    python -m pip install -vvv -e '.[matplotlib,phonopy_reader]'
+commands =
+    python tests_and_analysis/test/run_tests.py {posargs}
