Test installed Euphonic in CI, fixes #111, #112
commit 0d100eda92a76c87d2a5cfcf9fe979af1620588b
Author: Rebecca Fair <rebecca.fair@stfc.ac.uk>
Date:   Tue Jan 5 10:49:03 2021 +0000

    Include required pint files in install (fixes #111)

commit 93d0cf39811ba849737a3958b24d324d46a37689
Author: Rebecca Fair <rebecca.fair@stfc.ac.uk>
Date:   Tue Jan 5 10:33:59 2021 +0000

    Change tox dir when running tests

    Otherwise tests will be run against Euphonic/euphonic rather
    than the installed Euphonic. The use of -e in the install means
    this wasn't caught earlier as the C extensions were being created
    in Euphonic/euphonic so those tests didn't fail.

commit 4715bc537905d8ba1381d75c8fe5bdd76c993c0d
Author: Rebecca Fair <rebecca.fair@stfc.ac.uk>
Date:   Tue Dec 15 14:55:36 2020 +0000

    Change Pytest import-mode to append

    This ensures when running pytest it runs against the installed
    version of Euphonic. Using prepend (the default) prepends the root
    Euphonic directory to the path to enable from tests_and_analysis.test...
    importing. If append is used the installed version of Euphonic is picked
    up first

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -7,10 +7,11 @@ envlist = py36,py37,py38
 skipsdist = True
 
 [testenv]
+changedir = tests_and_analysis/test
 install_command = python -m pip install {opts} {packages}
 deps =
     -r tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install -vvv 'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' --force-reinstall --index-url https://pypi.org/simple
 commands =
-    python tests_and_analysis/test/run_tests.py --report
+    python run_tests.py --report
