--- a/tox.ini
+++ b/tox.ini
@@ -7,16 +7,18 @@ envlist = py36,py37,py38,py36-minrequirements-linux
 skipsdist = True
 
 [testenv]
+changedir = tests_and_analysis/test
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
     -rtests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -vvv --upgrade --upgrade-strategy eager -e '.[matplotlib,phonopy_reader]'
+    python -m pip install -vvv --upgrade --upgrade-strategy eager '{toxinidir}[matplotlib,phonopy_reader]'
 commands =
-    python tests_and_analysis/test/run_tests.py --cov --report {posargs}
+    python run_tests.py --cov --report {posargs}
 
 [testenv:py36-minrequirements-linux]
+changedir = tests_and_analysis/test
 install_command = python -m pip install {opts} {packages}
 platform =
     linux: linux
@@ -28,6 +30,6 @@ commands_pre =
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
-    python -m pip install -vvv -e '.[matplotlib,phonopy_reader]'
+    python -m pip install -vvv '{toxinidir}[matplotlib,phonopy_reader]'
 commands =
-    python tests_and_analysis/test/run_tests.py {posargs}
+    python run_tests.py {posargs}
