--- a/tox.ini
+++ b/tox.ini
@@ -8,28 +8,41 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
-install_command = python -m pip install {opts} {packages}
+install_command =
+    python -m pip install \
+        --force-reinstall \
+        --upgrade \
+        --upgrade-strategy eager \
+        {opts} \
+        {packages}
 deps =
     numpy
-    -rtests_and_analysis/tox_requirements.txt
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -vvv --upgrade --upgrade-strategy eager '{toxinidir}[matplotlib,phonopy_reader]'
+    python -m pip install \
+    --force-reinstall \
+    --upgrade \
+    --upgrade-strategy eager \
+    '{toxinidir}[matplotlib,phonopy_reader]'
 commands =
     python run_tests.py --cov --report {posargs}
 
 [testenv:py36-minrequirements-linux]
 changedir = tests_and_analysis/test
-install_command = python -m pip install {opts} {packages}
+install_command =
+    python -m pip install \
+    --force-reinstall \
+    {opts} {packages}
 platform =
     linux: linux
 deps =
     numpy==1.12.1
-    -rtests_and_analysis/minimum_euphonic_requirements.txt
-    -rtests_and_analysis/tox_requirements.txt
+    -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
-    python -m pip install -vvv '{toxinidir}[matplotlib,phonopy_reader]'
+    python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
 commands =
     python run_tests.py {posargs}
