--- a/tox.ini
+++ b/tox.ini
@@ -37,9 +37,9 @@ platform =
     linux: linux
 deps =
     numpy==1.12.1
-    -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
+    python -m pip install --force-reinstall -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    python -m pip install --force-reinstall -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
