--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 # Use conda to set up the python environments to run in
-requires = tox-conda
+# Pin tox-conda 0.7.3 for now as tox-conda 0.8 requires conda 4.9.0
+# which isn't yet installed on all CI nodes
+requires = tox-conda==0.7.3
 # The python environments to run the tests in
 envlist = py36,py37,py38,py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
