--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
+include euphonic/LICENSE
+include euphonic/CITATION.cff
+include euphonic/data/*
+include euphonic/_version.py
+include versioneer.py
 include c/*.h
 include c/*.c
-include versioneer.py
-include euphonic/_version.py
