--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,9 +12,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.6
+      - name: Test conda
+        run: conda info
       - name: Update pip and install dependencies
         run: |
           python -m pip install --upgrade --user pip
