--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -16,15 +16,18 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.6
-      - name: Test conda
-        run: conda info
-      - name: Update pip and install dependencies
-        run: |
-          python -m pip install --upgrade --user pip
-          python -m pip install -r tests_and_analysis/jenkins_requirements.txt
-      - name: Run tests
-        run: python -m tox
-      - uses: codecov/codecov-action@v2
-        if: startsWith(matrix.os, 'ubuntu')
-        with:
-          files: coverage.xml
+#      - name: Update pip and install dependencies
+#        run: |
+#          python -m pip install --upgrade --user pip
+#          python -m pip install -r tests_and_analysis/jenkins_requirements.txt
+#      - name: Run tests
+#        run: python -m tox
+#      - uses: codecov/codecov-action@v2
+#        if: startsWith(matrix.os, 'ubuntu')
+#        with:
+#          files: coverage.xml
+  static-analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: codacy/codacy-analysis-cli-action@4.0.0
