--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,3 +31,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: codacy/codacy-analysis-cli-action@4.0.0
+        with:
+          directory: $PWD/euphonic
