--- a/release_tox.ini
+++ b/release_tox.ini
@@ -10,8 +10,11 @@ skipsdist = True
 changedir = tests_and_analysis/test
 install_command = python -m pip install {opts} {packages}
 deps =
-    -r tests_and_analysis/tox_requirements.txt
+    numpy
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -vvv 'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' --force-reinstall --index-url https://pypi.org/simple
+    python -m pip install -vvv \
+    --force-reinstall \
+    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}'
 commands =
     python run_tests.py --report
