--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: v0.6.1
+          ref: 181_github_actions
       - uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.6
