--- a/release_tox.ini
+++ b/release_tox.ini
@@ -13,7 +13,7 @@ deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install -vvv \
+    python -m pip install \
     --force-reinstall \
     'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}'
 commands =
