--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,10 +22,18 @@ jobs:
 #          python -m pip install -r tests_and_analysis/jenkins_requirements.txt
 #      - name: Run tests
 #        run: python -m tox
-#      - uses: codecov/codecov-action@v2
-#        if: startsWith(matrix.os, 'ubuntu')
-#        with:
-#          files: coverage.xml
+#      - name: Publish test results
+#          uses: EnricoMi/publish-unit-test-result-action@v1
+#          if: |
+#            startsWith(matrix.os, 'ubuntu') &&
+#            always()
+#          with:
+#            files: tests_and_analysis/test/reports/junit_report*.xml
+#      - name: Publish coverage
+#          uses: codecov/codecov-action@v2
+#          if: startsWith(matrix.os, 'ubuntu')
+#          with:
+#            files: coverage.xml
   static-analysis:
     runs-on: ubuntu-latest
     steps:
