--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,6 +1,5 @@
 name: run-tests
 on:
-  push:
   pull_request:
   workflow_dispatch:
 
@@ -16,24 +15,24 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.6
-#      - name: Update pip and install dependencies
-#        run: |
-#          python -m pip install --upgrade --user pip
-#          python -m pip install -r tests_and_analysis/jenkins_requirements.txt
-#      - name: Run tests
-#        run: python -m tox
-#      - name: Publish test results
-#          uses: EnricoMi/publish-unit-test-result-action@v1
-#          if: |
-#            startsWith(matrix.os, 'ubuntu') &&
-#            always()
-#          with:
-#            files: tests_and_analysis/test/reports/junit_report*.xml
-#      - name: Publish coverage
-#          uses: codecov/codecov-action@v2
-#          if: startsWith(matrix.os, 'ubuntu')
-#          with:
-#            files: coverage.xml
+      - name: Update pip and install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r tests_and_analysis/jenkins_requirements.txt
+      - name: Run tests
+        run: python -m tox
+      - name: Publish test results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: |
+          startsWith(matrix.os, 'ubuntu') &&
+          always()
+        with:
+          files: tests_and_analysis/test/reports/junit_report*.xml
+      - name: Publish coverage
+        uses: codecov/codecov-action@v2
+        if: startsWith(matrix.os, 'ubuntu')
+        with:
+          files: coverage.xml
   static-analysis:
     runs-on: ubuntu-latest
     steps:
