--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,12 +2,16 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py36,py37,py38
+envlist = {pypi,conda}-{py36,py37,py38}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
+commands =
+    python run_tests.py --report
+
+[testenv:pypi-{py36,py37,py38}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -16,5 +20,14 @@ commands_pre =
     python -m pip install \
     --force-reinstall \
     'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}'
-commands =
-    python run_tests.py --report
+
+[testenv:conda-{py36,py37,py38}]
+whitelist_externals = conda
+install_command = conda install {packages}
+conda_channels =
+    conda-forge
+    default
+conda_deps =
+    --file=../tests_and_analysis/tox_requirements.txt
+commands_pre =
+    conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
