Whitelist rm command to avoid warning

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ commands =
     python run_tests.py --cov --report {posargs}
 
 [testenv:py36-minrequirements-linux]
+whitelist_externals = rm
 changedir = tests_and_analysis/test
 install_command =
     python -m pip install \
