--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -7,7 +7,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -16,10 +16,12 @@ jobs:
         with:
           python-version: 3.6
       - name: Update pip and install dependencies
+        shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
       - name: Run tests
+        shell: bash -l {0}
         run: python -m tox
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v1
