--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -22,10 +22,12 @@ jobs:
         with:
           python-version: 3.6
       - name: Update pip and install dependencies
+        shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
       - name: Run tests
+        shell: bash -l {0}
         env:
           EUPHONIC_VERSION: 0.6.1
         run: python -m tox -c release_tox.ini
