--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -5,7 +5,6 @@ on:
       version:
         description: 'The Euphonic release version to test e.g. 0.6.1'
         required: true
-  push:
 
 jobs:
   test:
@@ -17,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: 181_github_actions
+          ref: v{{ github.event.inputs.version }}
       - uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.6
@@ -29,7 +28,7 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         env:
-          EUPHONIC_VERSION: 0.6.1
+          EUPHONIC_VERSION: {{ github.event.inputs.version }}
         run: python -m tox -c release_tox.ini
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v1
