--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -30,10 +30,17 @@ jobs:
         env:
           EUPHONIC_VERSION: {{ github.event.inputs.version }}
         run: python -m tox -c release_tox.ini
-      - name: Publish test results
+      - name: Publish test results Linux
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: |
           startsWith(matrix.os, 'ubuntu') &&
+          always()
+        with:
+          files: tests_and_analysis/test/reports/junit_report*.xml
+      - name: Publish test results Mac/Windows
+        uses: EnricoMi/publish-unit-test-result-action/composite@v1
+        if: |
+          (startsWith(matrix.os, 'macos') || startsWith(matrix.os, 'windows')) &&
           always()
         with:
           files: tests_and_analysis/test/reports/junit_report*.xml
