--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -75,16 +75,16 @@ jobs:
       - name: Upload source dist to PyPI
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.6'
         env:
-          TWINE_USERNAME: ${{ secrets.TEST_PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD }}
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          python -m twine upload --repository testpypi dist/*.tar.gz
+          python -m twine upload dist/*.tar.gz
         shell: bash
       - name: Upload wheel to PyPI
         env:
-          TWINE_USERNAME: ${{ secrets.TEST_PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD }}
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
           WHEEL_NAME: ${{ matrix.wheelname }}
         run: |
-          python -m twine upload --repository testpypi wheelhouse/*-${WHEEL_NAME}*.whl
+          python -m twine upload wheelhouse/*-${WHEEL_NAME}*.whl
         shell: bash
