Fix and test source dist on PyPI
commit 7c365ea30bf07ee0ef1c2f34d98b9778e6625690
Author: Rebecca Fair <rebecca.fair@stfc.ac.uk>
Date:   Tue Oct 26 10:20:31 2021 +0100

    Test release source dist on PyPI

commit 46e8509763a453ede433672feb5b7cca925ab66e
Author: Rebecca Fair <rebecca.fair@stfc.ac.uk>
Date:   Tue Oct 26 10:13:03 2021 +0100

    Create source dist on Windows

    For some reason permission issues on Linux

--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -63,7 +63,7 @@ jobs:
           pip-wheel-args: '--no-deps -w wheelhouse'
 
       - name: Create source distribution
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.6'
+        if: matrix.os == 'windows-latest' && matrix.python-version == '3.8'
         run: |
           python setup.py sdist
         shell: bash
@@ -74,7 +74,7 @@ jobs:
             name: wheels
             path: wheelhouse/*-${{ matrix.wheelname }}*.whl
       - name: Upload source dist to PyPI
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.6'
+        if: matrix.os == 'windows-latest' && matrix.python-version == '3.8'
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
