--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = {pypi,conda}-{py36,py37,py38}
+envlist = {pypi,conda}-{py36,py37,py38},pypisource-py36
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -10,6 +10,19 @@ skipsdist = True
 changedir = tests_and_analysis/test
 commands =
     python run_tests.py --report
+
+# Test PyPI source distribution
+[testenv:pypisource-py36]
+install_command = python -m pip install {opts} {packages}
+deps =
+    numpy
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+commands_pre =
+    python -m pip install \
+    --force-reinstall \
+    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
+    --no-binary 'euphonic'
+
 
 [testenv:pypi-{py36,py37,py38}]
 install_command = python -m pip install {opts} {packages}
@@ -19,7 +32,8 @@ deps =
 commands_pre =
     python -m pip install \
     --force-reinstall \
-    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}'
+    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
+    --only-binary 'euphonic'
 
 [testenv:conda-{py36,py37,py38}]
 whitelist_externals = conda
